--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Turn on!",
+  "name": "Turn On! administrá vos tus turnos!!",
   "icons": [
     {
       "src": "favicon.ico",
